--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
   <po-menu [p-menus]="menus"></po-menu>
 
   <po-page-default p-title="AppName">
-    <p> AppName page </p>
+    <div class="w-25">
+      <app-select title="teste" class="w-25"></app-select>
+    </div>
   </po-page-default>
 </div>
