--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,1 @@
-<div class="po-wrapper">
-  <po-toolbar p-title="AppName"></po-toolbar>
-
-  <po-menu [p-menus]="menus"></po-menu>
-
-  <po-page-default p-title="AppName">
-    <div class="w-25">
-      <app-select title="teste" class="w-25"></app-select>
-    </div>
-  </po-page-default>
-</div>
+<router-outlet></router-outlet>
