--- a/src/app/shared/select/select.component.html
+++ b/src/app/shared/select/select.component.html
@@ -1,2 +1,2 @@
-<po-select name="select" [p-label]="title" [p-options]="options">
+<po-select name="select" [p-label]="title" [p-options]="options" [p-placeholder]="placeholder" [p-required]="required" [p-readonly]="isreadonly" [p-disabled]="isdisabled" (selected)="onSelectionChange($event)">
 </po-select>
