feat(home): pagina principal da SPA feita

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<div class="welcome-container">
+    <div class="title-container">
+        <p class="page-title po-font-title">Bem vindo a Ball Don't lie page!</p>
+    </div>
+    <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/d_PtEq1MOlM?si=WL9ApwjfMCnqGZYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <section class="about-container po-font-text">
+        <p>Olá, entusiasta do esporte! Bem-vindo ao "Ball Don't Lie"</p>
+
+        <p>Explore nosso site utilizando o menu ao lado. Temos seções dedicadas as franquias da NBA e também aos jogadores da liga</p>
+
+        <p>Fique à vontade para navegar e descobrir o que há de mais emocionante na NBA. Se precisar de
+            ajuda, o menu lateral está lá para guiá-lo em sua jornada.</p>
+
+        <p>Divirta-se explorando e que a paixão pelo esporte o envolva!</p>
+    </section>
+</div>
