construction(card) - Adicionadas propriedades no card component

--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,1 +1,3 @@
-<p>card works!</p>
+<div [ngStyle]="{ 'width': width}">
+    <po-widget [p-height]="height" [p-disabled]="disable" [p-title]="title"></po-widget>
+</div>
