refactor(home) - home component refatorada (margens adicionadas em classes)

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="welcome-container">
+<div class="ml-4rem">
     <div class="title-container">
         <p class="page-title po-font-title">Bem vindo a Ball Don't lie page!</p>
     </div>
