--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,3 +1,3 @@
-<div [ngStyle]="{ 'width': width}">
+<div class="card-component" [ngStyle]="{ 'width': width}">
     <po-widget [p-height]="height" [p-disabled]="disable" [p-title]="title"></po-widget>
 </div>
