refactor(card) - card adjustments

--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="po-mt-2 po-mb-2 po-ml-2 po-mr-2">
-    <po-widget [p-height]="height" [p-disabled]="disable" [p-title]="title">
+    <po-widget [p-disabled]="disable" [p-title]="title">
         <po-dynamic-view [p-fields]="fields" [p-value]="value">
         </po-dynamic-view>
     </po-widget>
