--- a/src/app/pages/franchises/franchises.component.html
+++ b/src/app/pages/franchises/franchises.component.html
@@ -9,7 +9,13 @@
     </div>
     <div class="filter-container po-mt-2 po-mb-2 po-ml-2 po-mr-2">
         <div class="select-container">
-            <app-select [options]="franchisesOptions" placeholder="Selecione uma franquia" title="Franquias" (selected)="onChangeFilter($event)" (change)="filterOptions()"></app-select>
+            <app-select 
+                [options]="franchisesOptions" 
+                placeholder="Selecione uma franquia" 
+                title="Franquias" 
+                (selected)="onChangeFilter($event)" 
+                (change)="filterOptions()"
+            ></app-select>
         </div>
 
         <div>
@@ -20,11 +26,20 @@
 
     <section class="card-container">
         <div *ngFor="let f of franchises">
-            <app-card [title]="f.full_name" [value]="f" [fields]="fields"></app-card>
+            <app-card 
+                [title]="f.full_name" 
+                [value]="f" 
+                [fields]="fields">
+            </app-card>
         </div>
     </section>
 
     <div class="po-mt-2 po-mb-2 po-ml-2 po-mr-2" *ngIf="franchises.length > 1">
-        <po-button p-size="large" p-label="Carregar mais" (p-click)="loadMore()"></po-button>
+        <po-button 
+            p-size="large" 
+            p-label="Carregar mais" 
+            (p-click)="loadMore()"
+            [p-disabled]="true"
+        ></po-button>
     </div>
 </div>
