feat(players.component) - implemented informations about players

--- a/src/app/pages/players/players.component.html
+++ b/src/app/pages/players/players.component.html
@@ -1,5 +1,9 @@
 <div class="ml-4rem">
 
+    <div class="loading-container" *ngIf="this.loading()">
+        <po-loading-overlay p-text="Carregando"></po-loading-overlay>
+    </div>
+
     <main class="players-container">
         <div class="title-container po-mt-2 po-mb-2 po-ml-2 po-mr-2">
             <h1 class="po-font-title">Jogadores NBA</h1>
@@ -14,8 +18,9 @@
         <section class="players-list-container">
             <div *ngFor="let p of players">
                 <app-card
-                    [title]="p.last_name"
+                    [title]="p.first_name + ' ' + p.last_name"
                     [value]="p"
+                    [fields]="fields"
                 ></app-card>
             </div>
         </section>
