--- a/src/app/pages/players/players.component.scss
+++ b/src/app/pages/players/players.component.scss
@@ -3,15 +3,43 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    
+
+    .buttons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+        .button-search{
+            display: flex;
+            //organiza tudo por coluna
+            flex-direction: column;
+            align-items: center;
+        
+            margin-top: 1rem;
+            padding-bottom: 1rem;
+            margin-left: 1rem;
+            margin-left: 0px;
+
+        }
+        .button-back{
+            display: flex;
+            //organiza tudo por coluna
+            flex-direction: column;
+            align-items: center;
+        
+            margin-top: 1rem;
+            padding-bottom: 1rem;
+            margin-left: 1rem;
+        }
+    }
     .title-container {
         display: flex;
         align-items: center;
         justify-content: center;
     }
-    .search-container {
-        min-width: 25%;
-        max-width: 25%;
-    }
+}
+.search-container {
+    min-width: 35%;
+    max-width: 35%;
 }
 
