--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import './sizes.css';
 @import './colors.css';
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
 
 .po-menu {
     z-index: 99;
