--- a/src/app/shared/loading-overlay/loading-overlay.component.html
+++ b/src/app/shared/loading-overlay/loading-overlay.component.html
@@ -1,3 +1,7 @@
-<div *ngIf="loader.isLoading$ | async"class="sample-container">
-    <po-loading-overlay></po-loading-overlay>
-  </div>
+<div *ngIf="loader.isLoading$ | async"class="loading-container">
+    <po-loading-overlay
+      [p-screen-lock]="true"
+    ></po-loading-overlay>
+    
+</div>
+
